load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "abseil_flag_ipport",
    srcs = [
        "abseil_flag_ipport.cpp",
        "abseil_flag_ipport.hpp",
    ],
    deps = [
        "@abseil//absl/flags:marshalling",
        "@abseil//absl/strings",
    ],
)
