load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

proto_deps = [
    "//demo/grpcdemo/proto:greeter_grpc_cc",
]

log_deps = [
    "//base/zlog",
    "//base/zlog:zlog_to_console",
]

gprc_deps = [
    "@com_github_grpc_grpc//:grpc++",
]

cc_library(
    name = "service_impl",
    srcs = ["service_impl.cc"],
    hdrs = ["service_impl.h"],
    deps = log_deps + proto_deps + gprc_deps,
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    linkstatic = True,
    deps = [
        ":service_impl",
        "//external:gtest_main",
    ],
)

cc_binary(
    name = "server",
    srcs = ["server.cpp"],
    deps = log_deps + [
        ":service_impl",
    ],
)

cc_binary(
    name = "client",
    srcs = ["client.cpp"],
    deps = log_deps + proto_deps + gprc_deps + [
        "//base/util:time_util",
    ],
)

cc_binary(
    name = "client_async",
    srcs = ["client_async.cpp"],
    deps = log_deps + proto_deps + gprc_deps,
)

cc_binary(
    name = "client_async2",
    srcs = ["client_async2.cpp"],
    deps = log_deps + proto_deps + gprc_deps + [
        "//base/thread:worker",
    ],
)

cc_binary(
    name = "server_async",
    srcs = ["server_async.cc"],
    deps = log_deps + [
        ":service_impl",
        "//base/util:disablecopy",
        "//base/thread:thread_group",
    ],
)
