load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

cc_binary(
    name = "custom_new_delete",
    srcs = ["custom_new_delete.cpp"],
    deps = ["//base/util:time_util"],
)

cc_binary(
    name = "custom_allocator",
    srcs = ["custom_allocator.cpp"],
)

cc_test(
    name = "shared_ptr",
    srcs = ["shared_ptr.cpp"],
    deps = [
        "//external:gtest_main",
    ],
)
