load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//tools/bazel:util.bzl", "config_setting_from_bool_flag")

config_setting_from_bool_flag(
    default_value = 0,
    flag_name = "boringssl",
)

ssl_defines = select({
    "//conditions:default": [],
    "boringssl_enabled": ["-DUSE_BORINGSSL"],
})

ssl_libs = select({
    "//conditions:default": ["@openssl"],
    "boringssl_enabled": ["@boringssl//:ssl"],
})

cc_binary(
    name = "hmac",
    srcs = [
        "hmac.cpp",
    ],
    copts = [] + ssl_defines,
    deps = [
        "//base/zlog:zlog_to_console",
        "@abseil//absl/strings",
    ] + ssl_libs,
)

cc_binary(
    name = "list_names",
    srcs = [
        "list_names.cpp",
    ],
    copts = [] + ssl_defines,
    deps = [
        "//base/zlog:zlog_to_console",
    ] + ssl_libs,
)

cc_binary(
    name = "signature_benchmark",
    srcs = [
        "signature_benchmark.cpp",
    ],
    copts = [],
    deps = [
        "//base/util:time_util",
        "@openssl",
    ],
)
