load("@rules_cc//cc:defs.bzl", "cc_proto_library", "cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "pbtest_proto",
    srcs = ["pbtest.proto"],
)

cc_proto_library(
    name = "pbtest_cc_proto",
    deps = [":pbtest_proto"],
)

cc_test(
    name = "pbtest",
    srcs = ["pbtest.cc"],
    deps = [
        ":pbtest_cc_proto",
        "//external:gtest_main",
    ],
)
