load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//tools/bazel:util.bzl", "config_settings_from_int_flag")

config_settings_from_int_flag(
    config = [
        1,
        3,
        5,
        9,
    ],
    default_value = 3,
    flag_name = "N_TRY",
)

cc_binary(
    name = "tls_session_ticket",
    srcs = [
        "tls_session_ticket.cpp",
    ],
    copts = [] + select({
        "//conditions:default": [],
        "N_TRY_1": ["-DN_TRY=1"],
        "N_TRY_3": ["-DN_TRY=3"],
        "N_TRY_5": ["-DN_TRY=5"],
        "N_TRY_9": ["-DN_TRY=9"],
    }),
    deps = [
        "//base/http",
        "//base/util:time_util",
        "//demo/common:abseil_flag_ipport",
        "@abseil//absl/flags:parse",
        "@abseil//absl/strings",
        "@openssl",
    ],
)

cc_binary(
    name = "tls_false_start",
    srcs = [
        "tls_false_start.cpp",
    ],
    copts = [] + select({
        "//conditions:default": [],
        "N_TRY_1": ["-DN_TRY=1"],
        "N_TRY_3": ["-DN_TRY=3"],
        "N_TRY_5": ["-DN_TRY=5"],
        "N_TRY_9": ["-DN_TRY=9"],
    }),
    deps = [
        "//base/zlog:zlog_to_console",
        "//base/http",
        "//base/util:time_util",
        "//demo/common:abseil_flag_ipport",
        "@abseil//absl/flags:parse",
        "@abseil//absl/strings",
        "@boringssl//:ssl",
    ],
)
